# the libdc1394_control itself

lib_LTLIBRARIES = libdc1394_control.la

libdc1394_control_la_LDFLAGS = -version-info 8:0:8

libdc1394_control_la_SOURCES =  \
	dc1394_control.c 	\
	dc1394_capture.c	\
        dc1394_control.h	\
	dc1394_format7.c

# headers to be installed
pkginclude_HEADERS = dc1394_control.h

